post: added the treatment for Don't forget as an embedded Google Doc

--- a/index.html
+++ b/index.html
@@ -12,7 +12,34 @@
     <h1><em class="sunset-gradient-text">Sharing things late rather than never</em></h1>
 
     <ul>
-      <div>
+      <!-- <section>
+        <li>
+          <span class="date">01/01/0000</span>
+          <span class="title"><a data-toggle="collapse" href="#templateHref" role="button" aria-expanded="false" aria-controls="templateHref"><strong>Write your title here</strong></a></span>
+        </li>
+        <li>
+          <span class="content">
+            <div class="collapse" id="templateHref">
+              <p>Write your content here</p>
+            </div>
+          </span>
+        </li>
+      </section> -->
+      <section>
+        <li>
+          <span class="date">14/01/2023</span>
+          <span class="title"><a data-toggle="collapse" href="#firstTreatment" role="button" aria-expanded="false" aria-controls="firstTreatment"><strong>I wrote the thing for a thing</strong></a></span>
+        </li>
+        <li>
+          <span class="content">
+            <div class="collapse" id="firstTreatment">
+              <p>My first movie's treatment: Don't Forget. It's still a work in progress, that's why some strikethroughs were left. My writing isn't where I want it to be, so hopefully the story will keep you reading😅.</p>
+              <iframe src="https://docs.google.com/document/d/e/2PACX-1vSyIy9-oaP2B9GYuYLh17PsuoCrkevYkXEvF4Iu_lBbXzD8s-_qfy7kzj7l4LOCOuqZjV8wyYtdGSxD/pub?embedded=true" width="100%" height="350">Loading...</iframe>
+            </div>
+          </span>
+        </li>
+      </section>
+      <section>
         <li>
           <span class="date">10/01/2023</span>
           <span class="title"><a data-toggle="collapse" href="#leWagonEnrollment" role="button" aria-expanded="false" aria-controls="leWagonEnrollment"><strong>Enrolled into Le Wagon!</strong></a></span>
@@ -24,7 +51,7 @@
             </div>
           </span>
         </li>
-      </div>
+      </section>
     </ul>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
