build: added an about entry and organised the content into sections instead of divs

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
 
-    <h1><em class="sunset-gradient-text">Sharing things late rather than never</em></h1>
+    <h1 class="mt-5"><em>Sharing things late rather than never</em></h1>
 
-    <ul>
+    <ul class="mt-5">
       <!-- <section>
         <li>
           <span class="date">01/01/0000</span>
@@ -25,6 +25,42 @@
           </span>
         </li>
       </section> -->
+      <section>
+        <li>
+          <span class="date">13/05/2023</span>
+          <span class="title link-orange"><a data-toggle="collapse" href="#about" role="button" aria-expanded="false" aria-controls="about"><strong>About | Why I created betterlate.page</strong></a></span>
+        </li>
+        <li>
+          <span class="content">
+            <div class="collapse" id="about">
+              <p>
+                Let me start off by saying that I have a huge dislike for social media. I hate how addictive it is and hate how it makes me feel a lot of the time.
+                That's why by 2019, I had uninstalled Instagram, Facebook and Snapchat from my phone. I still access them from time to time on my desktop, but I don't spend
+                hours on them anymore. I'm proud to say that my weekly on screen time is below 2 hours per day. Anyways, that doesn't really answer the question does it.
+                <br>
+                <br>
+                What I dislike about social media is the pressure I have to always be on it and always compare myself to others. I wanted a platform on which I could share things on my own terms,
+                and even others don't have to hear from me unless they really want to. I just wanted to redistribute that power and attention. That's why a blog makes the most sense.
+                And I got to make it from scratch too hehe.
+                <br>
+                <br>
+                <em>So what will I be sharing on <strong>betterlate</strong></em>? Everything and anything honestly. The page will serve as many things to me. An archive of ideas, events, and creativity.
+                It will also serve be a diary and a way for me to improve my writing and communication. The organisation of the different entries will be confusing since I'm also retroactively dating these things.
+                Check me out on <a href="https://www.linkedin.com/in/lucas-nseyep/"><u>LinkedIn</u></a> and <a href="https://github.com/LucasNseyep/"><u>Github</u></a>.
+                <br>
+                <br>
+                The site will go live on Monday, May the 15th 2023. My goal is to have at least 7 entries by then. Let's see if that'll be true ❤.
+              </p>
+            </div>
+          </span>
+        </li>
+      </section>
+      <section>
+        <li>
+          <span class="date">08/02/2023</span>
+          <span class="title"><a href="https://lucasnseyep.github.io/profile/"><strong>I made a personal profile at my boot camp (Le Wagon)</strong></a></span>
+        </li>
+      </section>
       <section>
         <li>
           <span class="date">14/01/2023</span>
