build: green font colour for new posts - post: grownupme 1

--- a/index.html
+++ b/index.html
@@ -27,6 +27,25 @@
       </section> -->
       <section>
         <li>
+          <span class="date">14/05/2023</span>
+          <span class="title link-green"><a data-toggle="collapse" href="#grownUpMe1" role="button" aria-expanded="false" aria-controls="grownUpMe1"><strong>What I want to be when I grow up (1)</strong></a></span>
+        </li>
+        <li>
+          <span class="content">
+            <div class="collapse" id="grownUpMe1">
+              <p>I want to— no, I WILL found my own tech company (law of attraction right).</p>
+              <p>A company with:</p>
+              <ul style="list-style-type: disc; padding-left: 40px; margin-bottom: 16px;">
+                <li>The stylishness of A24, Apple, and Teenage Engineering.</li>
+                <li>The (self-) awareness of Patagonia and Google (at times).</li>
+                <li>The impact of Generation Investment Management.</li>
+              </ul>
+            </div>
+          </span>
+        </li>
+      </section>
+      <section>
+        <li>
           <span class="date">13/05/2023</span>
           <span class="title link-orange"><a data-toggle="collapse" href="#about" role="button" aria-expanded="false" aria-controls="about"><strong>About | Why I created betterlate.page</strong></a></span>
         </li>
