post: howling moon launch

--- a/index.html
+++ b/index.html
@@ -28,6 +28,33 @@
       <section>
         <li>
           <span class="date">14/05/2023</span>
+          <span class="title link-green"><a data-toggle="collapse" href="#grownUpMe2" role="button" aria-expanded="false" aria-controls="grownUpMe2"><strong>What I want to be when I grow up (2)</strong></a></span>
+        </li>
+        <li>
+          <span class="content">
+            <div class="collapse" id="grownUpMe2">
+              <p>
+                What type of product would I make and sell? Products in accessibility, creativity, and sustainable development.
+                <br>
+                <br>
+                An interesting product category I have been thinking about is information boards. More precisely boards that track publicly available information about specific topics. Exactly like how layoffs.fyi tracks tech layoffs. Putting all layoff numbers on one, single and accessible, page. But how do you win bread from that?
+                <br>
+                Here are a few suggestions:
+                <ul style="list-style-type: disc; padding-left: 40px; margin-bottom: 32px;">
+                  <li>Subscription service only – No access to any of the information unless you’ve paid.</li>
+                  <li>Subscription service that gives you access to more detailed information. The free tier just gives minimum usable information.</li>
+                </ul>
+                Another interest of mine has always been hardware. But as the saying goes: ‘hardware is hard’ but let's just disregard it for now (sorry Lionel). The type of hardware that I'm interested in is smart home devices. Specifically, the type of devices that make a home more accessible, by being friendly to ALL users.
+                <br>
+                Think Google Nest. Think Microsoft Accessibility Controller. Think about a frictionless home experience no matter who you are.
+              </p>
+            </div>
+          </span>
+        </li>
+      </section>
+      <section>
+        <li>
+          <span class="date">14/05/2023</span>
           <span class="title link-green"><a data-toggle="collapse" href="#grownUpMe1" role="button" aria-expanded="false" aria-controls="grownUpMe1"><strong>What I want to be when I grow up (1)</strong></a></span>
         </li>
         <li>
@@ -76,8 +103,31 @@
       </section>
       <section>
         <li>
+          <span class="date">17/03/2023</span>
+          <span class="title"><a data-toggle="collapse" href="#howlingMoon" role="button" aria-expanded="false" aria-controls="howlingMoon"><strong>My first app is online: Howling Moon!</strong></a></span>
+        </li>
+        <li>
+          <span class="content">
+            <div class="collapse" id="howlingMoon">
+              <p>The last weeks of the LeWagon boot camp involved building an app from scratch. I submitted an idea for a notetaking app, pitched it, and got selected by my fellow students.</p>
+              <p><strong>Pitch deck</strong>:</p>
+              <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTL_cCXbV_soxin-AG01JecI8ELxx3rJyhPsU57BZ4-L-sLzZWOvhQieIMtTQnaiRQ0u0gLNWKunIe2/embed?start=false&loop=false&delayms=60000" width="920" height="554" title="The slides I used to pitch my idea at the Le Wagon boot camp."></iframe>
+              <p><em>With <a href="https://youtube.com/clip/UgkxDI8RNWccFV9gFQM7eHxDSUBnG5Ihad5E"><u>little video</u></a> that accompanied my presentation.</em></p>
+              <p><strong>Problem</strong>: Our thoughts are spread across too many mediums: notebooks, post-its, note taking apps, magazines, napkins, etc.</p>
+              <p><strong>Target users</strong>: People who produce original work. Students and knowledge workers who need to write essays and reports.</p>
+              <p><strong>Solution</strong>: An app that aggregates all thoughts no matter the shape or form (notes, figures, images, voice memos, etc...) and displays them in an accessible way.</p>
+
+              <p><u><strong>Final Product</strong></u>:</p>
+              <p>The <a href="https://github.com/LucasNseyep/howling-moon" target="_blank"><u>GitHub</u></a></p>
+              <p>The <a href="http://www.howlingmoon.xyz/" target="_blank"><u>WebApp</u></a></p>
+            </div>
+          </span>
+        </li>
+      </section>
+      <section>
+        <li>
           <span class="date">08/02/2023</span>
-          <span class="title"><a href="https://lucasnseyep.github.io/profile/"><strong>I made a personal profile at my boot camp (Le Wagon)</strong></a></span>
+          <span class="title"><a href="https://lucasnseyep.github.io/profile/" target="_blank"><strong>I made a personal profile at my boot camp (Le Wagon)</strong></a></span>
         </li>
       </section>
       <section>
@@ -89,7 +139,7 @@
           <span class="content">
             <div class="collapse" id="firstTreatment">
               <p>My first movie's treatment: Don't Forget. It's still a work in progress, that's why some strikethroughs were left. My writing isn't where I want it to be, so hopefully the story will keep you reading😅.</p>
-              <iframe src="https://docs.google.com/document/d/e/2PACX-1vSyIy9-oaP2B9GYuYLh17PsuoCrkevYkXEvF4Iu_lBbXzD8s-_qfy7kzj7l4LOCOuqZjV8wyYtdGSxD/pub?embedded=true" width="100%" height="350">Loading...</iframe>
+              <iframe src="https://docs.google.com/document/d/e/2PACX-1vSyIy9-oaP2B9GYuYLh17PsuoCrkevYkXEvF4Iu_lBbXzD8s-_qfy7kzj7l4LOCOuqZjV8wyYtdGSxD/pub?embedded=true" width="920" height="554">Loading...</iframe>
             </div>
           </span>
         </li>
@@ -113,4 +163,4 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
-</html>
+  </html>
