chore: last pass

--- a/index.html
+++ b/index.html
@@ -30,23 +30,18 @@
       <section>
         <li>
           <span class="date">14/05/2023</span>
-          <span class="title link-green"><a data-toggle="collapse" href="#grownUpMe2" role="button" aria-expanded="false" aria-controls="grownUpMe2"><strong>What I want to be when I grow up (2)</strong></a></span>
+          <span class="title"><a data-toggle="collapse" href="#grownUpMe2" role="button" aria-expanded="false" aria-controls="grownUpMe2"><strong>What I want to be when I grow up (2)</strong></a></span>
         </li>
         <li>
           <span class="content">
             <div class="collapse" id="grownUpMe2">
               <p>
-                What type of product would I make and sell? Products in accessibility, creativity, and sustainable development.
+                What type of product would I make and sell? Products that fall into accessibility, creativity, and sustainable development.
                 <br>
                 <br>
-                An interesting product category I have been thinking about is information boards. More precisely boards that track publicly available information about specific topics. Exactly like how layoffs.fyi tracks tech layoffs. Putting all layoff numbers on one, single and accessible, page. But how do you win bread from that?
+                An interesting product category I have been thinking about is information boards. More precisely boards that track publicly available information. Exactly like how layoffs.fyi tracks tech layoffs. Putting all layoff information in one place.
                 <br>
-                Here are a few suggestions:
-                <ul style="list-style-type: disc; padding-left: 40px; margin-bottom: 32px;">
-                  <li>Subscription service only – No access to any of the information unless you’ve paid.</li>
-                  <li>Subscription service that gives you access to more detailed information. The free tier just gives minimum usable information.</li>
-                </ul>
-                Another interest of mine has always been hardware. But as the saying goes: ‘hardware is hard’ but let's just disregard it for now (sorry Lionel). The type of hardware that I'm interested in is smart home devices. Specifically, the type of devices that make a home more accessible, by being friendly to ALL users.
+                Another interest of mine has always been hardware. But as the saying goes: ‘hardware is hard’ but let's just disregard it for now (sorry Lionel). The type of hardware that I'm interested in is smart home devices. Specifically, the type of devices that make a home more accessible, making it friendly to ALL users.
                 <br>
                 Think Google Nest. Think Microsoft Accessibility Controller. Think about a frictionless home experience no matter who you are.
               </p>
@@ -62,7 +57,7 @@
         <li>
           <span class="content">
             <div class="collapse" id="grownUpMe1">
-              <p>I want to— no, I WILL found my own tech company (law of attraction right).</p>
+              <p>I want to— no, I WILL found my own tech company (law of attraction, am I right).</p>
               <p>A company with:</p>
               <ul style="list-style-type: disc; padding-left: 40px; margin-bottom: 16px;">
                 <li>The stylishness of A24, Apple, and Teenage Engineering.</li>
@@ -82,19 +77,17 @@
           <span class="content">
             <div class="collapse" id="about">
               <p>
-                Let me start off by saying that I have a huge dislike for social media. I hate how addictive it is and hate how it makes me feel a lot of the time.
-                That's why by 2019, I had uninstalled Instagram, Facebook and Snapchat from my phone. I still access them from time to time on my desktop, but I don't spend
-                hours on them anymore. I'm proud to say that my weekly on screen time is below 2 hours per day. Anyways, that doesn't really answer the question does it.
+                Let me start off by saying that I have a huge dislike of social media. I hate how addictive it is and hate how it makes me feel a lot of the time.
+                That's why by 2021, I had uninstalled Instagram, Facebook and Snapchat from my phone. I still access them from time to time through my desktop, but I don't spend
+                as much time on them anymore. I'm proud to say that my weekly on screen time is below 2 hours per day. Anyways, that doesn't really answer the question does it.
                 <br>
                 <br>
-                What I dislike about social media is the pressure I have to always be on it and always compare myself to others. I wanted a platform on which I could share things on my own terms,
-                and even others don't have to hear from me unless they really want to. I just wanted to redistribute that power and attention. That's why a blog makes the most sense.
-                And I got to make it from scratch too hehe.
+                I created this website because I wanted a platform on which I could share things on my own terms. Others don't have to hear from me unless they really want to. That's why a blog makes the most sense.
+                And I got to make it from scratch too hehe...
                 <br>
                 <br>
-                <em>So what will I be sharing on <strong>betterlate</strong></em>? Everything and anything honestly. The page will serve as many things to me. An archive of ideas, events, and creativity.
-                It will also serve be a diary and a way for me to improve my writing and communication. The organisation of the different entries will be confusing since I'm also retroactively dating these things.
-                Check me out on <a href="https://www.linkedin.com/in/lucas-nseyep/"><u>LinkedIn</u></a> and <a href="https://github.com/LucasNseyep/"><u>Github</u></a>.
+                <em>So what will I be sharing on <strong>betterlate</strong></em>? Everything and anything honestly. An archive of ideas, events, and creativity.A diary and a way for me to improve my writing and communication. The organisation of the different entries will be confusing since I'm also retroactively dating these things.
+                If you want to learn more about me and reach me, here is my <a href="https://www.linkedin.com/in/lucas-nseyep/"><u>LinkedIn</u></a> and <a href="https://github.com/LucasNseyep/"><u>Github</u></a>.
                 <br>
                 <br>
                 The site will go live on Monday, May the 15th 2023. My goal is to have at least 7 entries by then. Let's see if that'll be true ❤.
@@ -111,15 +104,15 @@
         <li>
           <span class="content">
             <div class="collapse" id="howlingMoon">
-              <p>The last weeks of the LeWagon boot camp involved building an app from scratch. I submitted an idea for a notetaking app, pitched it, and got selected by my fellow students.</p>
+              <p>The last weeks of the LeWagon boot camp involved building an app from scratch. I submitted an idea for a notetaking app, pitched it, and it got selected by my fellow students.</p>
               <p><strong>Pitch deck</strong>:</p>
               <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTL_cCXbV_soxin-AG01JecI8ELxx3rJyhPsU57BZ4-L-sLzZWOvhQieIMtTQnaiRQ0u0gLNWKunIe2/embed?start=false&loop=false&delayms=60000" width="920" height="554" title="The slides I used to pitch my idea at the Le Wagon boot camp."></iframe>
-              <p><em>With <a href="https://youtube.com/clip/UgkxDI8RNWccFV9gFQM7eHxDSUBnG5Ihad5E"><u>little video</u></a> that accompanied my presentation.</em></p>
+              <p><em>With the <a href="https://youtube.com/clip/UgkxDI8RNWccFV9gFQM7eHxDSUBnG5Ihad5E"><u>little video</u></a> that accompanied my presentation.</em></p>
               <p><strong>Problem</strong>: Our thoughts are spread across too many mediums: notebooks, post-its, note taking apps, magazines, napkins, etc.</p>
               <p><strong>Target users</strong>: People who produce original work. Students and knowledge workers who need to write essays and reports.</p>
               <p><strong>Solution</strong>: An app that aggregates all thoughts no matter the shape or form (notes, figures, images, voice memos, etc...) and displays them in an accessible way.</p>
 
-              <p><u><strong>Final Product</strong></u>:</p>
+              <p><u><strong>The MVP</strong></u>:</p>
               <p>The <a href="https://github.com/LucasNseyep/howling-moon" target="_blank"><u>GitHub</u></a></p>
               <p>The <a href="http://www.howlingmoon.xyz/" target="_blank"><u>WebApp</u></a></p>
             </div>
@@ -140,7 +133,7 @@
         <li>
           <span class="content">
             <div class="collapse" id="firstTreatment">
-              <p>My first movie's treatment: Don't Forget. It's still a work in progress, that's why some strikethroughs were left. My writing isn't where I want it to be, so hopefully the story will keep you reading😅.</p>
+              <p><em>Don't Forget</em> is a story I have been think about for a while. This is its treatment. It's still a work in progress, that's why you'll find strikethroughs and notes in places. My writing isn't where I want it to be, so hopefully you'll see past it and enjoy the story😅.</p>
               <iframe src="https://docs.google.com/document/d/e/2PACX-1vSyIy9-oaP2B9GYuYLh17PsuoCrkevYkXEvF4Iu_lBbXzD8s-_qfy7kzj7l4LOCOuqZjV8wyYtdGSxD/pub?embedded=true" width="920" height="554">Loading...</iframe>
             </div>
           </span>
@@ -154,7 +147,7 @@
         <li>
           <span class="content">
             <div class="collapse" id="leWagonEnrollment">
-              <p>After the internship at Shopify, I still felt like I was missing some core knowledge.</p>
+              <p>I'm hooked! After my internship at Shopify, I am sure that I want to pursue a career as a Software Engineer. But I'm still lacking some knowledge. After chatting with some of the bootcamps alumni, I've decided to enroll into Le Wagon. It'll help with my understanding of Web Developement and even allow me to build Apps from scratch!</p>
             </div>
           </span>
         </li>
