chore: cosmetic fixes and rewording

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
                 <br>
                 An interesting product category I have been thinking about is information boards. More precisely boards that track publicly available information. Exactly like how layoffs.fyi tracks tech layoffs. Putting all layoff information in one place.
                 <br>
+                <br>
                 Another interest of mine has always been hardware. But as the saying goes: ‘hardware is hard’ but let's just disregard it for now (sorry Lionel). The type of hardware that I'm interested in is smart home devices. Specifically, the type of devices that make a home more accessible, making it friendly to ALL users.
+                <br>
                 <br>
                 Think Google Nest. Think Microsoft Accessibility Controller. Think about a frictionless home experience no matter who you are.
               </p>
@@ -52,7 +54,7 @@
       <section>
         <li>
           <span class="date">14/05/2023</span>
-          <span class="title link-green"><a data-toggle="collapse" href="#grownUpMe1" role="button" aria-expanded="false" aria-controls="grownUpMe1"><strong>What I want to be when I grow up (1)</strong></a></span>
+          <span class="title"><a data-toggle="collapse" href="#grownUpMe1" role="button" aria-expanded="false" aria-controls="grownUpMe1"><strong>What I want to be when I grow up (1)</strong></a></span>
         </li>
         <li>
           <span class="content">
@@ -99,12 +101,12 @@
       <section>
         <li>
           <span class="date">17/03/2023</span>
-          <span class="title"><a data-toggle="collapse" href="#howlingMoon" role="button" aria-expanded="false" aria-controls="howlingMoon"><strong>My first app is online: Howling Moon!</strong></a></span>
+          <span class="title"><a data-toggle="collapse" href="#howlingMoon" role="button" aria-expanded="false" aria-controls="howlingMoon"><strong>My first app is live: Howling Moon!</strong></a></span>
         </li>
         <li>
           <span class="content">
             <div class="collapse" id="howlingMoon">
-              <p>The last weeks of the LeWagon boot camp involved building an app from scratch. I submitted an idea for a notetaking app, pitched it, and it got selected by my fellow students.</p>
+              <p>The last 2 weeks of the LeWagon boot camp involved building an original app from scratch. I submitted an idea for a notetaking app, pitched it, and it got selected by my fellow students.</p>
               <p><strong>Pitch deck</strong>:</p>
               <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTL_cCXbV_soxin-AG01JecI8ELxx3rJyhPsU57BZ4-L-sLzZWOvhQieIMtTQnaiRQ0u0gLNWKunIe2/embed?start=false&loop=false&delayms=60000" width="920" height="554" title="The slides I used to pitch my idea at the Le Wagon boot camp."></iframe>
               <p><em>With the <a href="https://youtube.com/clip/UgkxDI8RNWccFV9gFQM7eHxDSUBnG5Ihad5E"><u>little video</u></a> that accompanied my presentation.</em></p>
@@ -147,7 +149,7 @@
         <li>
           <span class="content">
             <div class="collapse" id="leWagonEnrollment">
-              <p>I'm hooked! After my internship at Shopify, I am sure that I want to pursue a career as a Software Engineer. But I'm still lacking some knowledge. After chatting with some of the bootcamps alumni, I've decided to enroll into Le Wagon. It'll help with my understanding of Web Developement and even allow me to build Apps from scratch!</p>
+              <p>I'm hooked! After my internship at Shopify, I am sure that I want to pursue a career as a Software Engineer. But I'm still lacking some knowledge. After chatting with some of the bootcamps alumni, I've decided to enroll into Le Wagon. It'll help with my understanding of Web Developement and even give me the knowledge to build apps from scratch!</p>
             </div>
           </span>
         </li>
