feature: making the page responsive

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <ul class="mt-5">
       <!-- <section>
-        <li>
+        <li class="blog-entry">
           <span class="date">01/01/0000</span>
           <span class="title"><a data-toggle="collapse" href="#templateHref" role="button" aria-expanded="false" aria-controls="templateHref"><strong>Write your title here</strong></a></span>
         </li>
@@ -28,7 +28,7 @@
         </li>
       </section> -->
       <section>
-        <li>
+        <li class="blog-entry">
           <span class="date">14/05/2023</span>
           <span class="title"><a data-toggle="collapse" href="#grownUpMe2" role="button" aria-expanded="false" aria-controls="grownUpMe2"><strong>What I want to be when I grow up (2)</strong></a></span>
         </li>
@@ -52,7 +52,7 @@
         </li>
       </section>
       <section>
-        <li>
+        <li class="blog-entry">
           <span class="date">14/05/2023</span>
           <span class="title"><a data-toggle="collapse" href="#grownUpMe1" role="button" aria-expanded="false" aria-controls="grownUpMe1"><strong>What I want to be when I grow up (1)</strong></a></span>
         </li>
@@ -71,7 +71,7 @@
         </li>
       </section>
       <section>
-        <li>
+        <li class="blog-entry">
           <span class="date">13/05/2023</span>
           <span class="title link-orange"><a data-toggle="collapse" href="#about" role="button" aria-expanded="false" aria-controls="about"><strong>About | Why I created betterlate.page</strong></a></span>
         </li>
@@ -99,7 +99,7 @@
         </li>
       </section>
       <section>
-        <li>
+        <li class="blog-entry">
           <span class="date">17/03/2023</span>
           <span class="title"><a data-toggle="collapse" href="#howlingMoon" role="button" aria-expanded="false" aria-controls="howlingMoon"><strong>My first app is live: Howling Moon!</strong></a></span>
         </li>
@@ -122,13 +122,13 @@
         </li>
       </section>
       <section>
-        <li>
+        <li class="blog-entry">
           <span class="date">08/02/2023</span>
           <span class="title"><a href="https://lucasnseyep.github.io/profile/" target="_blank"><strong>I made a personal profile at my boot camp (Le Wagon)</strong></a></span>
         </li>
       </section>
       <section>
-        <li>
+        <li class="blog-entry">
           <span class="date">14/01/2023</span>
           <span class="title"><a data-toggle="collapse" href="#firstTreatment" role="button" aria-expanded="false" aria-controls="firstTreatment"><strong>I wrote the thing for a thing</strong></a></span>
         </li>
@@ -142,7 +142,7 @@
         </li>
       </section>
       <section>
-        <li>
+        <li class="blog-entry">
           <span class="date">10/01/2023</span>
           <span class="title"><a data-toggle="collapse" href="#leWagonEnrollment" role="button" aria-expanded="false" aria-controls="leWagonEnrollment"><strong>Enrolled into Le Wagon!</strong></a></span>
         </li>
