--- a/index.html
+++ b/index.html
@@ -29,6 +29,25 @@
       </section> -->
       <section>
         <li class="blog-entry">
+          <span class="date">23/06/2023</span>
+          <span class="title"><a data-toggle="collapse" href="#templateHref" role="button" aria-expanded="false" aria-controls="templateHref"><strong>I made something again!</strong></a></span>
+        </li>
+        <li>
+          <span class="content">
+            <div class="collapse" id="templateHref">
+              <img src="images/thumbnail.PNG" alt="Girl in a jacket">
+              <p>I recently created a CLI app called <strong><em>climateticker</em></strong>. An app that enables users to easily uncover and analyze corporate climate goals outlined in annual reports. It's tool that could be useful to the sales teams of climate accounting companies.</p>
+              <p>Here's a little demo :</p>
+              <video controls>
+                <source src="images/climateticker_demo.mp4" type="video/mp4">
+              </video>
+              <p>Check it out on <a href="https://github.com/LucasNseyep/climateticker-v1/">github</a></p>
+            </div>
+          </span>
+        </li>
+      </section>
+      <section>
+        <li class="blog-entry">
           <span class="date">14/05/2023</span>
           <span class="title"><a data-toggle="collapse" href="#grownUpMe2" role="button" aria-expanded="false" aria-controls="grownUpMe2"><strong>What I want to be when I grow up (2)</strong></a></span>
         </li>
