changed source of climateticker video to github url

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <p>I recently created a CLI app called <strong><em>climateticker</em></strong>. An app that enables users to easily uncover and analyze corporate climate goals outlined in annual reports. It's tool that could be useful to the sales teams of climate accounting companies.</p>
               <p>Here's a little demo :</p>
               <video controls>
-                <source src="images/climateticker_demo.mp4" type="video/mp4">
+                <source src="https://github.com/LucasNseyep/climateticker-v1/assets/57943753/fffbbbb8-1c9d-4436-a8d4-b103ce3fc6eb" type="video/mp4">
               </video>
               <p>Check it out on <a href="https://github.com/LucasNseyep/climateticker-v1/">github</a></p>
             </div>
