new post: Pathfinder

--- a/index.html
+++ b/index.html
@@ -29,19 +29,53 @@
       </section> -->
       <section>
         <li class="blog-entry">
-          <span class="date">23/06/2023</span>
-          <span class="title"><a data-toggle="collapse" href="#templateHref" role="button" aria-expanded="false" aria-controls="templateHref"><strong>I made something again!</strong></a></span>
+          <span class="date">18/09/2023</span>
+          <span class="title"><a data-toggle="collapse" href="#pathfinder" role="button" aria-expanded="false" aria-controls="pathfinder"><strong>Completing the Product Development Cycle: Just finished a UI/UX bootcamp!</strong></a></span>
         </li>
         <li>
           <span class="content">
-            <div class="collapse" id="templateHref">
+            <div class="collapse" id="pathfinder">
+              <p>
+                I'm thrilled to share that I've recently completed an intensive UI/UX bootcamp. <br><br>
+
+                Throughout the program, I designed both mobile and desktop applications on a weekly basis. One standout project was a two-week freelance experience with a London-based tech startup. On top of this, all of the projects were assessed by seasoned UX professionals who gave us invaluable feedback. That feedback, combined with self- and peer-assessments resulted in a leaderboard. This culminated in the top five students earning the incredible opportunity to present their projects to hiring startups on demo day. <br><br>
+
+                I’m proud to say that I made it into the top five! Presenting my final project Is It Hot – an app to navigate cities during extreme weather, in front of startup founders at the EF offices in Hoxton – was nothing short of incredible. <br><br>
+
+                I’ve learned so much through the experience: from interviewing users to Figma handovers. I’m deeply grateful to Amaan, Sid, and the entire Pathfinder team for making all of it possible. I also want to extend a special thanks to Anastasia, Zazu, Jade, and Chloe for their support and advice over the whole of the program. <br><br>
+
+                The completion of this course signifies a great milestone in my understanding of the tech product development lifecycle. From ideation to validation (UI/UX bootcamp and internship at McKinsey & Company), creation (web development bootcamp and software development at Shopify), and distribution (sales at Google), I’ve experienced it all. And now… <br><br>
+
+                I'm actively seeking a full-time role. I’m a recent Imperial I'm eager to explore opportunities in Product Management, Software Engineering, as well as UI/UX Research and Design. <br><br>
+
+                Please share this with your network and Feel free to connect with me on <a href="https://www.linkedin.com/in/lucas-nseyep/">LinkedIn</a> or drop me a line at lucas.nseyep@gmail.com <br><br>
+
+                For more about me, check out: <br>
+                📝 Blog: the one you're on right now <br>
+                💻 Github: https://github.com/LucasNseyep/ <br>
+                </p>
+                Here's my video presentation for <em>Is It Hot</em>: <br><br>
+              <div style="position: relative; padding-bottom: 56.25%; height: 0;"><iframe src="https://www.loom.com/embed/85afb877dba44ea5aa75fb2124cb5e59?sid=c06dd87a-e2a3-4592-8f38-ae6a6c0932b6" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe></div>
+              <br>
+            </div>
+          </span>
+        </li>
+      </section>
+      <section>
+        <li class="blog-entry">
+          <span class="date">23/06/2023</span>
+          <span class="title"><a data-toggle="collapse" href="#climateTicker" role="button" aria-expanded="false" aria-controls="climateTicker"><strong>I made something again!</strong></a></span>
+        </li>
+        <li>
+          <span class="content">
+            <div class="collapse" id="climateTicker">
               <img src="images/thumbnail.PNG" alt="Girl in a jacket">
               <p>I recently created a CLI app called <strong><em>climateticker</em></strong>. An app that enables users to easily uncover and analyze corporate climate goals outlined in annual reports. It's tool that could be useful to the sales teams of climate accounting companies.</p>
               <p>Here's a little demo :</p>
               <video controls>
                 <source src="https://github.com/LucasNseyep/climateticker-v1/assets/57943753/fffbbbb8-1c9d-4436-a8d4-b103ce3fc6eb" type="video/mp4">
               </video>
-              <p>Check it out on <a href="https://github.com/LucasNseyep/climateticker-v1/">github</a></p>
+              <p>Check it out on <a href="https://github.com/LucasNseyep/climateticker-v1/"><b>GitHub</b></a></p>
             </div>
           </span>
         </li>
